--- a/games.html
+++ b/games.html
@@ -11,14 +11,26 @@
           gtag('config', 'UA-171567980-1');
         </script>
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <div class="topnav" id="myTopnav">
-            <a href="#a11y">Accessibility</a>
-            <a href="#games">Games</a>
-            <a href="#home" class="active">Home</a>
+            <a href="/index.html">Home</a>
+            <a href="/games.html" class="active">Games</a>
+            <a href="/accessibility.html">Accessibility</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
           </div>
+
+          <script>
+            function myFunction() {
+              var x = document.getElementById("myTopnav");
+              if (x.className === "topnav") {
+                x.className += " responsive";
+              } else {
+                x.className = "topnav";
+              }
+            }
+            </script>
 
         <title>Shall Make, Shall Be: The Bill of Rights at Play</title>
         <meta name="description" content="Shall Make, Shall Be: The Bill of Rights at Play">
@@ -59,31 +71,10 @@
 </p>
 
     <p>
-        The 1st amendment is ripe with a history of rich sound reflected in its use and is a natural candidate
-        for a sound based, educational, playable game. I propose to create The Voices (working title), a
-        playable game/musical instrument/sound station that explores ideas embedded in the 1st
-        amendment. This includes samples from educational audio sources, music and sounds from a variety
-        of religions and spiritual practices, and field recordings from speeches and protests. Additionally
-        there will be a recording capability so users can make and play back their own ‘free speech’. All of
-        these are embedded in a colorful board with large plastic buttons that can be played.
-    </p>
-    <p>
-        Through playful interaction and the creation of new compositions, the users are able to learn, turn
-        information into music, explore and ponder the 1st amendment and practice part of the amendment
-        itself. I intend for the work to be both accessible and critical, fun, absurd, and pushing the
-        boundaries of our understanding of the 1st amendment. Through the juxtaposition of a variety of
-        samples, the work can inspire the difficult and complex conversations this moment requires.   
-    </p>
-    <p>
-        The game board is a 30” high, 8” deep, 4’ diameter table made of plywood, housing play buttons
-        on the outside, and a Mini PC, a subwoofer & speakers, and an interface inside. It requires stools to
-        sit comfortably but can also be accessible to wheelchair users and standing children. The buttons
-        have pictures inserted to indicate the sound played. The table is programmed with up to 29
-        samples, including 3-5 unique looped beats, which can continue throughout the duration of the play.
-        Other samples will be trimmed down to different lengths to be played as accents to the beats, with
-        everything controlled by the player. Additionally, there are record and playback buttons for vocal
-        participation. The samples I intend to use are 3 to 30 seconds long, including the following subject
-        matter:  
+        To play the game, … Which By Their Very Utterance…, players press one of the large buttons. Each button triggers 
+        a different sound which last from 3 to 30 seconds. The sounds come from educational sources, music from different 
+        religions and cultures, and live recordings of speeches and protests.  The game can also record and play back the 
+        sounds the player creates for the game.  You can stand beside the game, sit on a stool, or in a wheelchair to play.
     </p>
     <p>
         Educational audio on the First Amendment, the free speech/hate speech debate, critiques of
@@ -105,7 +96,7 @@
         which have proven playability and function.  
     </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         El Congreso no promulgará ley alguna por la que adopte una religión de Estado, o que prohíba el libre ejercicio 
@@ -160,7 +151,7 @@
         make war, but peace. 
     </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         Por ser necesaria para la seguridad de un Estado libre una milicia bien regulada, no se restringirá 
@@ -180,46 +171,15 @@
         but in a manner to be prescribed by law.
     </p>
     <p>
-        The ultimate goal of the piece is to make people more aware of their right to privacy as outlined in the 3rd
-        amendment, and what that means in a post-internet age and the future. Then, push them to become an active
-        participant in shaping future policy that protects both themselves and the people around them, especially
-        people who are the most vulnerable to having their civil rights violated. 
-    </p>
-    <p>
-        The internet, like social structures, like laws, were built by people, and therefore built with implicit bias. Now,
-        more than ever, our most powerful tools are being built and implemented by a very small group of people, and
-        those groups often exclude minorities, people of color, the disabled, and the LGBTQ community. 
-    </p>
-    <p>
-        A lot of this new and upcoming technology already has problems in equitable distribution. Facial analysis has
-        disparity of accuracy between people of different races and harmful social media algorithms often prefer radical
-        content. If the internet, automatic analysis, and A.I. are drawing from a prejudiced data set the internet,
-        automatic analysis, and A.I. will be prejudiced. 
-    </p>
-    <p>
-        A person’s data and information are invaluable, in an increasingly interconnected world it will become the
-        currency of the world, in that sphere, it will be all too easy to let go of civil liberties in pursuit of power and
-        wealth. Like the beginnings of all power slides, like the one we see now, it will affect people differently
-        depending on their socio-economic status. Pay for you own IP, pay to be informed, pay for privacy, pay for
-        security. The first civil liberties to go will be those that belong to the most vulnerable among us. 
+        The game, Cyber Soldiers in Cyber Houses, is an “eye spy” game. The game is played on a computer screen using a mouse 
+        and keyboard. Players move the mouse over an image of a room in a house. When they identify an object that they think is 
+        “spying,” they click. Once the player finds all hidden spy objects in a room, the game advances to the next of 32 house 
+        images. Each of the 32 rooms gets more difficult to find the hidden spying objects. 
     </p>
     <p>
         I hope to impress on the player that we as a society, as a collective, must make laws to codify what we deem is
         acceptable for this new realm of technology. Like laws and systems, building games are about building a set of
         rules and structures that dictate how a player should act. 
-    </p>
-    <p>
-        The most straightforward way the audience interacts with the content is through the A.I. However, It’s up to the
-        player how much they listen and absorb while playing the game. The dialog grows from outlining the 3rd
-        amendment in relation to technology, to specific examples, to moral arguments about freedom and security.
-        The overall effect is to wash the information over the player gently. 
-    </p>
-    <p>
-        Each level is attached to a Person of Interest at risk to have their privacy compromised, and the player has the
-        choice to skip the level or leave it half done in order to reach the end before the timer runs out. This is a difficult
-        decision and trade off, especially as you get to later levels because the Person of Interest won’t matter as much
-        personally to the player. It’ll become easier and easier to abandon the Person of Interest. This is a choice that
-        the player will have to make at every level. 
     </p>
     <p>
         The point is that the player should care. They should care about the rights of people close to them and people
@@ -230,11 +190,8 @@
         trap of complacency when trusting our rights will be preserved by those who have a vested interest in not doing
         so. 
     </p>
-    <p>
-        At the very least I hope to inform and motivate players about these issues and take part in building the future. 
-    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         En tiempo de paz no se alojará a ningún soldado en casa alguna sin el consentimiento del propietario, ni en tiempo de 
@@ -253,11 +210,16 @@
         describing the place to be searched, and the persons or things to be seized.
     </p>
     <p>
-       Contempt is designed to re-engage with civics education following the discourse around the death of Breonna Taylor. One
-        of the most painful things to see 
+        The game, Contempt, has four parts. All four parts are played by clicking on the tablets on the table. The first part 
+        is a word puzzle. The player tries to reassemble the text of the 4th amendment. Once the words of the 4th amendment are 
+        in the right order, the second part of the game begins. The second part of the game puts the player in a dark room in which 
+        they were suddenly woken up. In less than two minutes, the player has to decide what has happened, and how to respond. During 
+        the third part of the game, the player listens to two recordings from famous court room scenes from real 4th amendment cases. 
+        In the fourth part of the game, the player returns to the word puzzle where they can write a more fair version of the fourth 
+        amendment.
     </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         No se infringirá el derecho del pueblo a que sus personas, domicilios, papeles y efectos estén protegidos contra los 
@@ -282,8 +244,14 @@
         life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, 
         liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation.
     </p>
+    <p>
+        The game, ___ vs. ___, is a two player deduction game played by a “Suspect” and an “Investigator. There are two tables, each with 
+        two chairs. Each table is for two players. The Investigator tries to get the Suspect to admit their crimes while the Suspect tries 
+        to avoid confession. To start, the Suspect selects two “Crimes” from a deck of cards. The Suspect and Investigator then agree to the 
+        rules for the investigation. These rules determine what the Investigator can and cannot ask about. 
+    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         Nadie estará obligado a responder de un delito capital o infame, salvo por acto de acusación de un jurado indagatorio, 
@@ -307,8 +275,15 @@
         be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process 
         for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defense.
     </p>
+    <p>
+        The game, Nomologos, is a videogame for one player. The player moves a ball through the National Mall by typing on a computer keyboard. 
+        The direction of movement is determined by the type of word typed. To move left, the player must type an antonym, or an opposite meaning, 
+        for the word on screen. To move right, the player must type a  synonym, or a word with a similar meaning. To jump up, the player must 
+        type a hypernym, or a more general word. To jump down, the player must type a hyponym, or a word with more specific meaning. Successfully 
+        typing words will keep the ball moving. Not moving the ball through the National Mall will cost a game life.
+    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         En cualquier causa penal el acusado gozará del derecho a que se lo juzgue con prontitud y públicamente por un jurado imparcial del 
@@ -328,8 +303,13 @@
         In suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be preserved, and no 
         fact tried by a jury, shall be otherwise re-examined in any court of the United States, than according to the rules of the common law.
     </p>
+    <p>
+        The game, Verbal Gymnastics, is a two player rhythm game. Each player moves their arms to catch balls on screen sent by five game characters. 
+        The player should capture balls of only certain colors depending on which character sent the ball. The player who catches the higher number 
+        of correctly colored balls wins.
+    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         Se garantizará el derecho al juicio por jurado en los juicios de derecho consuetudinario en los que el valor controvertido exceda de 
@@ -345,8 +325,13 @@
     <p style="font-style:italic;">
         Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.
     </p>
+    <p>
+        Evolving Standards of Decency is a gimbal maze. To play, the player tilts the maze so that the ball moves toward the goal in the center. 
+        To move left, the player tips the left side of the maze down. To move up, the player tips the top edge of the maze down, and so on. If the ball 
+        falls into one of the holes, the player loses, and must start again.
+    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         No se exigirán fianzas excesivas ni se impondrán multas excesivas ni se infligirán castigos crueles e inusitados.
@@ -360,8 +345,12 @@
     <p style="font-style:italic;">
         The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.
     </p>
+    <p>
+        The game, Father Figure, is a text-based adventure game. The interface of the game is a “command line” interface.  To play, the player must type 
+        commands to navigate the computer.
+    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         No se interpretará la enumeración de ciertos derechos en la Constitución como negativa o menosprecio de otros que retenga el pueblo.
@@ -375,8 +364,13 @@
         The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, 
         or to the people.
     </p>
+    <p>
+        The game, v.erses, is a tall, nine-sided column. Each column has a video screen and a sensor embedded in it. There are two ways to play. The first way is 
+        deciding whether the scenario should be decided by the State or the Federal government. The second way to play is by touching the sensors on each column side.
+        Music will play based on decisions the first player makes, and the sounds turned on by the second player.
+    </p>
     <p style="font-style:italic;">
-        Spanish Summary
+        -Español-
     </p>
     <p style="font-style:italic;">
         Los poderes que la Constitución no delega en los Estados Unidos ni prohíbe a los Estados quedan reservados a los Estados respectivamente o al pueblo.
@@ -391,7 +385,7 @@
 
 <!-- ------ Right Column -------- -->
 
-            <div class="rightColumn">
+            <!-- <div class="rightColumn">
                 <h3>1</h3>
                 <h2>Freedom of Religion, Speech, Press, Assembly, Petition</h2>
                 <p style="font-size:14px">Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p>
@@ -431,7 +425,7 @@
                 <h3>10</h3>
                 <h2>Separation of Powers and Federalism</h2>
                 <p style="font-size:14px">The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p>
-</div>
+</div> -->
                 
         </main>
             <footer>
