--- a/accessibility.html
+++ b/accessibility.html
@@ -11,7 +11,7 @@
           gtag('config', 'UA-171567980-1');
         </script>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="style.css">
         <div class="topnav" id="myTopnav">
             <a href="/index.html">Home</a>
             <a href="/games.html">Games</a>
@@ -39,7 +39,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Rubik+Mono+One&display=swap" rel="stylesheet">
         
 <!--        <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>-->
         <script>
@@ -70,32 +69,32 @@
     the back of the main floor rotunda on 15 Pine St. North. All informational stands and games are at wheelchair level. 
     All restrooms are wheelchair accessible. Restrooms are located on the basement floor, which can be accessed through elevator.
 </p>
-<img src="images/spatialmap.png" style="max-width: 90%; padding-bottom: 24px;" alt="A spatial map of Federal Hall">
+<img src="images/spatialmap.png" style="max-width: 90%; margin-bottom: 4em" alt="A spatial map of Federal Hall">
 
 <h3>Individuals who are blind or have low vision</h3>
 <p>
     Our website is compatible with screen readers. We recommend utilizing the website to learn more about the exhibition. 
 </p>
-<p>
+<p style="margin-bottom: 4em">
     Games have auditory and tactile feedback, and we use braille in our informational stands and pamphlets. Our personnel is trained 
     to help anyone who requests it. 
 </p>
 
 <h3>Individuals who are deaf or hard of hearing</h3>
-<p>
+<p style="margin-bottom: 4em">
     Automated captioning is available for all video content. American Sign Language (ASL) interpretation and live captioning is available 
     for public programs upon request with advance notice. Shall Make, Shall Be will make every effort to provide accommodation for requests 
     made on the same day. Please contact emailhere@gmail.com to make a request for these accommodations. 
 </p>
 
 <h3>Individuals with intellectual or developmental disabilities</h3>
-<p>
+<p style="margin-bottom: 4em">
     Federall Hall’s basement provides a quiet area for individuals with intellectual or developmental disabilities. Please refer to the map 
     above to locate all sitting and quiet areas. 
 </p>
 
 <h3>Individuals with dementia or Alzheimer’s</h3>
-<p>
+<p style="margin-bottom: 4em">
     Our personnel is trained to help individuals with Dementia or Alzheimer’s Disease. We recommend making use of the sitting and quiet areas 
     frequently and taking breaks when needed. 
 </p>
