fixed icon and font

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           gtag('config', 'UA-171567980-1');
         </script>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <div class="topnav" id="myTopnav">
             <a href="/index.html" class="active">Home</a>
             <a href="/games.html">Games</a>
@@ -33,7 +33,7 @@
             </script>
 
         <title>Shall Make, Shall Be: The Bill of Rights at Play</title>
-        <meta name="description" content="Shall Make, Shall Be: The Bill of Rights at Play">
+        <meta name="description" content="Shall Make, Shall Be: The Bill of Rights at Play" >
         <meta name="keywords" content="Shall Make, Shall Be: The Bill of Rights at Play, Bill of Rights, Ten Amendments">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
