--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
           gtag('config', 'UA-171567980-1');
         </script>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <div class="topnav" id="myTopnav">
             <a href="/index.html">Home</a>
             <a href="/games.html" class="active">Games</a>
