--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         </script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,800;0,900;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
+
         <div class="topnav" id="myTopnav">
             <a href="/index.html" class="active">Home</a>
             <a href="/games.html">Games</a>
