--- a/accessibility.html
+++ b/accessibility.html
@@ -15,7 +15,7 @@
         <div class="topnav" id="myTopnav">
             <a href="/index.html">Home</a>
             <a href="/games.html">Games</a>
-            <a href="/accessibility.html">Accessibility</a>
+            <a href="/accessibility.html" class="active">Accessibility</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
