--- a/accessibility.html
+++ b/accessibility.html
@@ -76,27 +76,14 @@
     Our website is compatible with screen readers. We recommend utilizing the website to learn more about the exhibition. 
 </p>
 <p style="margin-bottom: 4em">
-    Games have auditory and tactile feedback, and we use braille in our informational stands and pamphlets. Our personnel is trained 
+    Games have auditory and tactile feedback, and we use braille in our informational stands. Our personnel is trained 
     to help anyone who requests it. 
-</p>
-
-<h3>Individuals who are deaf or hard of hearing</h3>
-<p style="margin-bottom: 4em">
-    Automated captioning is available for all video content. American Sign Language (ASL) interpretation and live captioning is available 
-    for public programs upon request with advance notice. Shall Make, Shall Be will make every effort to provide accommodation for requests 
-    made on the same day. Please contact emailhere@gmail.com to make a request for these accommodations. 
 </p>
 
 <h3>Individuals with intellectual or developmental disabilities</h3>
 <p style="margin-bottom: 4em">
     Federall Hall’s basement provides a quiet area for individuals with intellectual or developmental disabilities. Please refer to the map 
     above to locate all sitting and quiet areas. 
-</p>
-
-<h3>Individuals with dementia or Alzheimer’s</h3>
-<p style="margin-bottom: 4em">
-    Our personnel is trained to help individuals with Dementia or Alzheimer’s Disease. We recommend making use of the sitting and quiet areas 
-    frequently and taking breaks when needed. 
 </p>
 
 <h3>QR CODES</h3>
